--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -1,4 +1,5 @@
-@import '../sass/z-indexes.scss';
+@import '../sass/utils';
+@import '../sass/z-indexes';
 
 .SchedulePage {
   &__toolbar {
@@ -12,6 +13,7 @@
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
     font-family: 'Roboto', sans-serif;
+    transition: top 200ms $mdEasingDecelerate;
 
     z-index: $zScheduleToolbar;
     box-sizing: border-box;
